--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@ body {text-align:center;margin:0}
 <div align=center><font color="#000000" face="Tahoma" class="ws8"><B>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </B></font><font face="Tahoma" class="ws8"><a href="Content.html" title="" class="style1">Cantent</a></font><font color="#000000" face="Tahoma" class="ws8"><B> Diclamer! </B></font><font color="#FFFFFF" face="Tahoma" class="ws8"><B>FAQ</B></font></div>
 </div></div>
 
-<div id="image1" style="position:absolute; overflow:hidden; left:18px; top:279px; width:739px; height:488px; z-index:11"><img src="images/Screenshot 2024-07-31 211158.png" alt="" title="" border=0 width=739 height=488></div>
+<div id="image1" style="position:absolute; overflow:hidden; left:18px; top:279px; width:739px; height:488px; z-index:11"><img src="./images/Screenshot 2024-07-31 211158.png" alt="" title="" border=0 width=739 height=488></div>
 
-<div id="image2" style="position:absolute; overflow:hidden; left:44px; top:60px; width:402px; height:173px; z-index:12"><img src="images/Screenshot 2024-07-31 213009.png" alt="" title="" border=0 width=402 height=173></div>
+<div id="image2" style="position:absolute; overflow:hidden; left:44px; top:60px; width:402px; height:173px; z-index:12"><img src="./images/Screenshot 2024-07-31 213009.png" alt="" title="" border=0 width=402 height=173></div>
 
-<div id="image4" style="position:absolute; overflow:hidden; left:444px; top:53px; width:318px; height:177px; z-index:13"><img src="images/Computer.png" alt="" title="" border=0 width=318 height=177></div>
+<div id="image4" style="position:absolute; overflow:hidden; left:444px; top:53px; width:318px; height:177px; z-index:13"><img src="./images/Computer.png" alt="" title="" border=0 width=318 height=177></div>
 
 <div style="position:absolute;left:12;top:832px;z-index:999"><a href="http://www.webpage-maker.com"><img border=0 src="images/wpmhome.gif" alt="Web Page Maker, create your own web pages."</a></div>
 </div>
