--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body {text-align:center;margin:0}
 <div id="container">
 <div id="image6" style="position:absolute; overflow:hidden; left:442px; top:72px; width:317px; height:165px; z-index:0; background-color:#C0C0C0"><img src="https://github.com/AlienGamerz/Test-4/blob/main/Screenshot%202024-07-31%20211158.png" alt="" title="" border=0 width=317 height=165></div>
 
-<div id="shape1" style="position:absolute; overflow:hidden; left:12px; top:254px; width:758px; height:535px; z-index:1"><img border=0 width="100%" height="100%" alt="" src="images/rect44720074.gif"></div>
+<div id="shape1" style="position:absolute; overflow:hidden; left:12px; top:254px; width:758px; height:535px; z-index:1"><img border=0 width="100%" height="100%" alt="" src="./images/rect44720074.gif"></div>
 
 <div id="g_image1" style="position:absolute; overflow:hidden; left:211px; top:19px; width:180px; height:33px; z-index:2"><img src="images/bar00.gif" alt="" title="" border=0 width=180 height=33></div>
 
