--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <div id="g_image1" style="position:absolute; overflow:hidden; left:211px; top:19px; width:180px; height:33px; z-index:2">
-            <img src="images/bar00.gif" alt="" width="180" height="33">
+            <img src="Screenshot 2024-07-31 211158.png" alt="" width="180" height="33">
         </div>
 
         <div id="image3" style="position:absolute; overflow:hidden; left:14px; top:257px; width:755px; height:17px; z-index:3">
