--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
 
         <div id="image9" style="position:absolute; overflow:hidden; left:12px; top:780px; width:759px; height:42px; z-index:4">
-            <img src="images/software_09.jpg" alt="" width="759" height="42">
+            <img src="Screenshot 2024-07-31 213009.png" alt="" width="759" height="42">
         </div>
 
         <div id="image13" style="position:absolute; overflow:hidden; left:208px; top:319px; width:6px; height:9px; z-index:5">
