--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
 
         <div id="image4" style="position:absolute; overflow:hidden; left:444px; top:53px; width:318px; height:177px; z-index:13">
-            <img src="./images/Computer.png" alt="" width="318" height="177">
+            <img src="Screenshot 2024-07-31 211158.png" alt="" width="318" height="177">
         </div>
     </div>
 </body>
