--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
 
         <div id="image1" style="position:absolute; overflow:hidden; left:18px; top:279px; width:739px; height:488px; z-index:11">
-            <img src="Screenshot 2024-07-31 211158.png" alt="" width="739" height="488">
+            <img src="Computer.png" alt="" width="739" height="488">
         </div>
 
         <div id="image2" style="position:absolute; overflow:hidden; left:44px; top:60px; width:402px; height:173px; z-index:12">
