--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
 
         <div id="image2" style="position:absolute; overflow:hidden; left:44px; top:60px; width:402px; height:173px; z-index:12">
-            <img src="./images/Screenshot 2024-07-31 213009.png" alt="" width="402" height="173">
+            <img src="Computer.png" alt="" width="402" height="173">
         </div>
 
         <div id="image4" style="position:absolute; overflow:hidden; left:444px; top:53px; width:318px; height:177px; z-index:13">
