--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
 
         <div id="image13" style="position:absolute; overflow:hidden; left:208px; top:319px; width:6px; height:9px; z-index:5">
-            <img src="images/arrow_red.gif" alt="" width="6" height="9">
+            <img src="Screenshot 2024-07-31 213009.png" alt="" width="6" height="9">
         </div>
 
         <div id="image14" style="position:absolute; overflow:hidden; left:208px; top:423px; width:6px; height:9px; z-index:6">
