--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div id="image3" style="position:absolute; overflow:hidden; left:14px; top:257px; width:755px; height:17px; z-index:3">
-            <img src="Screenshot 2024-07-31 213009.png" alt="" width="755" height="17">
+            <img src="bar00.gif" alt="" width="755" height="17">
         </div>
 
         <div id="image9" style="position:absolute; overflow:hidden; left:12px; top:780px; width:759px; height:42px; z-index:4">
