--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div id="shape1" style="position:absolute; overflow:hidden; left:12px; top:254px; width:758px; height:535px; z-index:1">
-            <img src="Computer.png" alt="" style="width:100%; height:100%;">
+            <img src="roundrect182089484.gif" alt="" style="width:100%; height:100%;">
         </div>
 
         <div id="g_image1" style="position:absolute; overflow:hidden; left:211px; top:19px; width:180px; height:33px; z-index:2">
