--- a/Books.html
+++ b/Books.html
@@ -100,9 +100,7 @@ function MM_swapImage() {
 <div><font face="Algerian" class="ws48"><B><U><I>Books</U></I></B></font></div>
 </div></div>
 
-<div id="nav20d" style="position:absolute; left:731px; top:284px; z-index:4"><a onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('nav20','','images/nav1825150460a.gif',1)" href="Digital Horizons.html"><img name="nav20" onLoad="MM_preloadImages('images/nav1825150460a.gif')" alt="" border=0 src="images/nav1825150460i.gif"></a></div>
-
-<div style="position:absolute;left:0;top:898px;z-index:999"><a href="http://www.webpage-maker.com"><img border=0 src="images/wpmhome.gif" alt="Web Page Maker, create your own web pages."</a></div>
+<div id="nav20d" style="position:absolute; left:731px; top:284px; z-index:4"><a onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('nav1825150460a.gif','','nav1825150460a.gif',1)" href="Digital Horizons.html"><img name="nav20" onLoad="MM_preloadImages('nav1825150460a.gif')" alt="" border=0 src="images/nav1825150460i.gif"></a></div>
 
 </body>
 </html>
