--- a/Content.html
+++ b/Content.html
@@ -86,7 +86,7 @@ function MM_swapImage() {
 <body>
 <div id="roundrect1" style="position:absolute; overflow:hidden; left:0px; top:0px; width:1716px; height:924px; z-index:0"><a href="#" title="Content"><img border=0 width="100%" height="100%" alt="" src=https://github.com/AlienGamerz/Test-4/blob/main/roundrect180925328.gif"></a></div>
 
-<div id="ellipse1" style="position:absolute; overflow:hidden; left:652px; top:0px; width:385px; height:200px; z-index:1"><img border=0 width="100%" height="100%" alt="" src="images/ellipse180967718.gif"></div>
+<div id="ellipse1" style="position:absolute; overflow:hidden; left:652px; top:0px; width:385px; height:200px; z-index:1"><img border=0 width="100%" height="100%" alt="" src="https://github.com/AlienGamerz/Test-4/blob/main/ellipse180967718.gif"></div>
 
 <div id="nav10d" style="position:absolute; left:8px; top:365px; z-index:2"><a onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('nav10','','nav1812655780i.gif',1)" href="index.html"><img name="nav10" onLoad="MM_preloadImages('images/nav1812655780a.gif')" alt="" border=0 src="images/nav1812655780i.gif"></a></div>
 
