--- a/Content.html
+++ b/Content.html
@@ -88,7 +88,7 @@ function MM_swapImage() {
 
 <div id="ellipse1" style="position:absolute; overflow:hidden; left:652px; top:0px; width:385px; height:200px; z-index:1"><img border=0 width="100%" height="100%" alt="" src="https://github.com/AlienGamerz/Test-4/blob/main/ellipse180967718.gif"></div>
 
-<div id="nav10d" style="position:absolute; left:8px; top:365px; z-index:2"><a onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('nav10','','nav1812655780i.gif',1)" href="index.html"><img name="nav10" onLoad="MM_preloadImages('images/nav1812655780a.gif')" alt="" border=0 src="https://github.com/AlienGamerz/Test-4/blob/main/images/nav1812655780i.gif"></a></div>
+<div id="nav10d" style="position:absolute; left:8px; top:365px; z-index:2"><a onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('nav10','','nav1812655780i.gif',1)" href="index.html"><img name="nav10" onLoad="MM_preloadImages('https://github.com/AlienGamerz/Test-4/blob/main/nav1812655780a.gif')" alt="" border=0 src="https://github.com/AlienGamerz/Test-4/blob/main/images/nav1812655780i.gif"></a></div>
 
 <div id="text1" style="position:absolute; overflow:hidden; left:693px; top:50px; width:305px; height:90px; z-index:3">
 <div class="wpmd">
@@ -97,9 +97,9 @@ function MM_swapImage() {
 
 <div id="nav20d" style="position:absolute; left:737px; top:354px; z-index:4"><a onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('nav1819772340a.gif','','nav1819772340a.gif',1)" href="Books.html"><img name="nav20" onLoad="MM_preloadImages('nav1819772340a.gif')" alt="" border=0 src="nav1819772340a.gif"></a></div>
 <div id="nav21d" style="position:absolute; left:737px; top:387px; z-index:4"><a onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('nav21','','nav1819772341a.gif',1)" href=""><img name="nav21" onLoad="MM_preloadImages('nav1819772341a.gif')" alt="" border=0 src="nav1819772341a.gif"></a></div>
-<div id="nav22d" style="position:absolute; left:737px; top:420px; z-index:4"><a onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('nav22','','images/nav1819772342a.gif',1)" href="#"><img name="nav22" onLoad="MM_preloadImages('images/nav1819772342a.gif')" alt="" border=0 src="https://github.com/AlienGamerz/Test-4/blob/main/nav1819772342i.gif"></a></div>
-<div id="nav23d" style="position:absolute; left:737px; top:453px; z-index:4"><a onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('nav23','','images/nav1819772343a.gif',1)" href="#"><img name="nav23" onLoad="MM_preloadImages('images/nav1819772343a.gif')" alt="" border=0 src="images/nav1819772343i.gif"></a></div>
-<div id="nav24d" style="position:absolute; left:737px; top:486px; z-index:4"><a onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('nav24','','images/nav1819772344a.gif',1)" href="#"><img name="nav24" onLoad="MM_preloadImages('images/nav1819772344a.gif')" alt="" border=0 src="images/nav1819772344i.gif"></a></div>
+<div id="nav22d" style="position:absolute; left:737px; top:420px; z-index:4"><a onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('nav22','','images/nav1819772342a.gif',1)" href="#"><img name="nav22" onLoad="MM_preloadImages('https://github.com/AlienGamerz/Test-4/blob/main/nav1819772342a.gif')" alt="" border=0 src="https://github.com/AlienGamerz/Test-4/blob/main/nav1819772342i.gif"></a></div>
+<div id="nav23d" style="position:absolute; left:737px; top:453px; z-index:4"><a onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('nav23','','images/nav1819772343a.gif',1)" href="#"><img name="nav23" onLoad="MM_preloadImages('https://github.com/AlienGamerz/Test-4/blob/main/nav1819772343a.gif')" alt="" border=0 src="images/nav1819772343i.gif"></a></div>
+<div id="nav24d" style="position:absolute; left:737px; top:486px; z-index:4"><a onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('nav24','','images/nav1819772344a.gif',1)" href="#"><img name="nav24" onLoad="MM_preloadImages('https://github.com/AlienGamerz/Test-4/blob/main/nav1819772344a.gif')" alt="" border=0 src="images/nav1819772344i.gif"></a></div>
 
 </body>
 </html>
