--- a/Books.html
+++ b/Books.html
@@ -93,7 +93,7 @@ function MM_swapImage() {
 <div id="nav14d" style="position:absolute; left:0px; top:478px; z-index:1"><a onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('nav14','','https://github.com/AlienGamerz/Test-4/blob/main/nav1821388124a.gif',1)" href="#"><img name="nav14" onLoad="MM_preloadImages('https://github.com/AlienGamerz/Test-4/blob/main/nav1821388124a.gif')" alt="" border=0 src="https://github.com/AlienGamerz/Test-4/blob/main/nav1821388124i.gif"></a></div>
 <div id="nav15d" style="position:absolute; left:0px; top:511px; z-index:1"><a onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('nav15','','https://github.com/AlienGamerz/Test-4/blob/main/nav1821388125a.gif',1)" href="#"><img name="nav15" onLoad="MM_preloadImages('https://github.com/AlienGamerz/Test-4/blob/main/nav1821388125a.gif')" alt="" border=0 src="https://github.com/AlienGamerz/Test-4/blob/main/nav1821388125i.gif"></a></div>
 
-<div id="ellipse1" style="position:absolute; overflow:hidden; left:692px; top:16px; width:302px; height:126px; z-index:2"><img border=0 width="100%" height="100%" alt="" src="images/ellipse182428046.gif"></div>
+<div id="ellipse1" style="position:absolute; overflow:hidden; left:692px; top:16px; width:302px; height:126px; z-index:2"><img border=0 width="100%" height="100%" alt="" src="https://github.com/AlienGamerz/Test-4/blob/main/ellipse182428046.gif"></div>
 
 <div id="text1" style="position:absolute; overflow:hidden; left:723px; top:33px; width:230px; height:90px; z-index:3">
 <div class="wpmd">
