--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <div a href="Zain_Test.html">
+    <a href="Zain_Test.html">Click here to visit Zain_Test.html</a> 
     <div id="container">
         <div id="image6" style="position:absolute; overflow:hidden; left:442px; top:72px; width:317px; height:165px; z-index:0; background-color:#C0C0C0">
             <img src="https://github.com/AlienGamerz/Test-4/blob/main/Screenshot%202024-07-31%20211158.png" alt="" width="317" height="165">
