--- a/Zain_Test.html
+++ b/Zain_Test.html
@@ -11,5 +11,14 @@ Zain boss
 Zain
 </h1>
 <a href="Books.html">Books</a>
+<form>
+<input type="textarea">
+</form>
+<table>
+<tr>
+<th>
+Zain 
+</th>
+</tr>
 </body>
 </html>
